--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -21,6 +21,7 @@
     <string name="no">Ні</string>
     <string name="got_it">Готово!</string>
     <string name="volume">Гучність</string>
+    <string name="go_to">Перейти до</string>
     <string name="msg_sel">Натисніть, щоб обрати декілька елементів</string>
     <string name="msg_move">Натисніть, щоб перемістити вибрані елементи</string>
     <string name="msg_loading">Загрузка&#8230;</string>
@@ -51,10 +52,10 @@
     <string name="opt_is_vertical_margin_large">Використовувати більшу відстань між елементами в списках</string>
     <string name="opt_handle_call_key">Використовувати клавішу "Подзвонити/Набір" як "Відтворення/Пауза"</string>
     <string name="opt_play_when_headset_plugged">Автоматично включати відтворення при підключенні гарнітури</string>
-	<string name="opt_block_back_key">Заблокувати кнопку "Назад", яка повертає на головний екран</string>
+    <string name="opt_block_back_key">Заблокувати кнопку "Назад", яка повертає на головний екран</string>
     <string name="opt_double_click_mode">Використовувати подвійне натиснення для відтворення пісень у плейлисті</string>
-	<string name="opt_marquee_title">Прокручувати заголовок поточної пісні, якщо він не поміщається на екран</string>
-	<string name="opt_prepare_next">Попередньо завантажувати наступну пісню для того, щоб скоротити розрив між піснями</string>
+    <string name="opt_marquee_title">Прокручувати заголовок поточної пісні, якщо він не поміщається на екран</string>
+    <string name="opt_prepare_next">Попередньо завантажувати наступну пісню для того, щоб скоротити розрив між піснями</string>
     <string name="opt_clear_list_when_playing_folders">Очищення існуючого списку, перед програванням папки, нового списку або альбому</string>
     <string name="opt_go_back_when_playing_folders">Повернутися до списку при відтворенні папки, нового списку або альбому</string>
     <string name="opt_force_orientation">Примусова орієнтація екрану:</string>
@@ -98,14 +99,14 @@
     <string name="more">Детальніше&#8230;</string>
     <string name="visualizer_not_supported">Ваш пристрій не підтримує візуалізацію :(</string>
     <string name="audio_effects">Звукові ефекти</string>
-    <string name="goto_equalizer">Перейти до налаштувань еквалайзера&#8230;</string>
+    <string name="go_to_equalizer">Перейти до налаштувань еквалайзера&#8230;</string>
     <string name="enable_equalizer">Включити еквалайзер</string>
     <string name="equalizer_not_supported">Ваш пристрій не підтримує еквалайзер :(</string>
     <string name="zero_preset">Скинути передустановку</string>
     <string name="load_preset">Завантажити передустановку</string>
     <string name="save_preset">Зберегти передустановку</string>
     <string name="item_preset">передустановка</string>
-    <string name="goto_bass_boost">Перейти до налаштувань басів&#8230;</string>
+    <string name="go_to_bass_boost">Перейти до налаштувань басів&#8230;</string>
     <string name="enable_bass_boost">Включити посилення басів</string>
     <string name="bass_boost_not_supported">Ваш пристрій не підтримує посилення басів :(</string>
     <string name="bass_boost_strength_not_supported">Ваш пристрій не підтримує посилення басів :(</string>
@@ -138,12 +139,12 @@
     <string name="unknownArtist">[Невідомий виконавець]</string>
     <string name="title">Назва</string>
     <string name="artist">Виконавець</string>
-	<string name="album">Альбом</string>
-	<string name="length">Тривалість</string>
-	<string name="year">рік</string>
-	<string name="no_info">-</string>
+    <string name="album">Альбом</string>
+    <string name="duration">Тривалість</string>
+    <string name="year">рік</string>
+    <string name="no_info">-</string>
     <string name="standard_language">Стандартна мова</string>
-	<string name="artists">Виконавці</string>
+    <string name="artists">Виконавці</string>
     <string name="albums">Альбоми</string>
     <string name="music">Музика</string>
     <string name="downloads">Завантаження</string>
@@ -158,5 +159,10 @@
     <string name="error_timeout">Вибачте, але час доступу до даних минув під час відтворення :(</string>
     <string name="error_server_died">Вибачте, але медіа-сервер був аварійно зупинений під час відтворення :(</string>
     <string name="error_security">Вибачте, але виникла проблема з безпекою під час відтворення :(</string>
+    <string name="opt_theme">Колірна схема:</string>
+    <string name="blue_orange">Синій/Оранжевий</string>
+    <string name="blue">Синій</string>
+    <string name="orange">Оранжевий</string>
+    <string name="light">Світлий</string>
 
 </resources>
