--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -55,8 +55,8 @@
     <string name="opt_block_back_key">Заблокувати кнопку "Назад", яка повертає на головний екран</string>
     <string name="opt_double_click_mode">Використовувати подвійне натиснення для відтворення пісень у плейлисті</string>
     <string name="opt_marquee_title">Прокручувати заголовок поточної пісні, якщо він не поміщається на екран</string>
-    <string name="opt_prepare_next">Попередньо завантажувати наступну пісню для того, щоб скоротити розрив між піснями</string>
-    <string name="opt_clear_list_when_playing_folders">Очищення існуючого списку, перед програванням папки, нового списку або альбому</string>
+    <string name="opt_prepare_next">Попередньо завантажувати наступну пісню, щоб скоротити розрив між піснями</string>
+    <string name="opt_clear_list_when_playing_folders">Очищення існуючого списку перед програванням папки, нового списку або альбому</string>
     <string name="opt_go_back_when_playing_folders">Повернутися до списку при відтворенні папки, нового списку або альбому</string>
     <string name="opt_force_orientation">Примусова орієнтація екрану:</string>
     <string name="opt_fade_in_focus">Зменшення гучності при дзвінку або іншому перериванні ззовні:</string>
@@ -160,13 +160,13 @@
     <string name="error_server_died">Вибачте, але медіа-сервер був аварійно зупинений під час відтворення :(</string>
     <string name="error_security">Вибачте, але виникла проблема з безпекою під час відтворення :(</string>
     <string name="coming_soon">Скоро&#8230; ;)</string>
-    <string name="blue_orange">Синій/Оранжевий</string>
-    <string name="blue">Синій</string>
-    <string name="orange">Оранжевий</string>
-    <string name="light">Світлий</string>
+    <string name="blue_orange">Синя/Помаранчева</string>
+    <string name="blue">Синя</string>
+    <string name="orange">Помаранчева</string>
+    <string name="light">Світла</string>
     <string name="new_setting">Нова налаштування!</string>
     <string name="there_is_a_new_setting">Існує новий параметр в меню \"Налаштування\":</string>
     <string name="check_it_out">Проверьте это :)</string>
     <string name="color_scheme">Колірна схема</string>
-    
+
 </resources>
