--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -168,5 +168,38 @@
     <string name="there_is_a_new_setting">Існує новий параметр в меню \"Налаштування\":</string>
     <string name="check_it_out">Проверьте это :)</string>
     <string name="color_scheme">Колірна схема</string>
+    <string name="widget">Widget</string>
+    <string name="transparent_background">Transparent background</string>
+    <string name="text_color">Text color</string>
+    <string name="icon_color">Icon color</string>
+    <string name="apply_theme">Apply theme</string>
+    <string name="hard_theme">Your theme has at least one hard-to-read combination of text/background&#8230; Apply theme anyway?</string>
+    <string name="unreadable_theme">Sorry, but your theme has at least one unreadable combination of text/background colors :(</string>
+    <string name="discard_theme">Do you really want to discard the changes made to the theme?</string>
+    <string name="load_colors_from_current_theme">Load colors from current theme</string>
+    <string name="general">General</string>
+    <string name="selection">Selection</string>
+    <string name="keyboard_focus">Selection with Keyboard Focus</string>
+    <string name="color_window">Window background</string>
+    <string name="color_control_mode">Control mode background</string>
+    <string name="color_list">List background</string>
+    <string name="color_menu">Menu background</string>
+    <string name="color_menu_icon">Menu icon</string>
+    <string name="color_divider">Divider</string>
+    <string name="color_highlight">Highlight background</string>
+    <string name="color_text_highlight">Highlight text</string>
+    <string name="color_text">Window text</string>
+    <string name="color_text_disabled">Window text (disabled)</string>
+    <string name="color_text_listitem">List text</string>
+    <string name="color_text_selected">Text</string>
+    <string name="color_text_menu">Menu text</string>
+    <string name="color_selected_grad_lt">Top background</string>
+    <string name="color_selected_grad_dk">Bottom background</string>
+    <string name="color_selected_border">Border</string>
+    <string name="color_selected_pressed">Pressed background</string>
+    <string name="color_focused_grad_lt">Top background</string>
+    <string name="color_focused_grad_dk">Bottom background</string>
+    <string name="color_focused_border">Border</string>
+    <string name="color_focused_pressed">Pressed background</string>
 
 </resources>
