Fixed identation issues, fixed keyboard focus issues, improved color customization

--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -92,6 +92,7 @@
     <string name="add_songs">Adicionar músicas</string>
     <string name="control_mode">Modo controle</string>
     <string name="list">Lista&#8230;</string>
+    <string name="list2">Lista</string>
     <string name="clear_list">Limpar lista</string>
     <string name="load_list">Abrir lista</string>
     <string name="save_list">Salvar lista</string>
@@ -164,6 +165,7 @@
     <string name="blue">Azul</string>
     <string name="orange">Laranja</string>
     <string name="light">Claro</string>
+    <string name="dark_light">Escuro/Claro</string>
     <string name="new_setting">Nova opção!</string>
     <string name="there_is_a_new_setting">Há uma nova opção disponível no menu \"Opções\":</string>
     <string name="check_it_out">Dê uma olhada :)</string>
@@ -180,27 +182,22 @@
     <string name="general">Geral</string>
     <string name="selection">Seleção</string>
     <string name="keyboard_focus">Seleção com Foco do Teclado</string>
-    <string name="color_window">Fundo da janela</string>
-    <string name="color_control_mode">Fundo do modo controle</string>
-    <string name="color_list">Fundo da lista</string>
-    <string name="color_menu">Fundo do menu</string>
-    <string name="color_menu_icon">Ícone do menu</string>
-    <string name="color_divider">Divisor</string>
-    <string name="color_highlight">Fundo do destaque</string>
-    <string name="color_text_highlight">Texto do destaque</string>
-    <string name="color_text">Texto da janela</string>
-    <string name="color_text_disabled">Texto da janela (desabilitado)</string>
-    <string name="color_text_listitem">Texto da lista</string>
-    <string name="color_text_selected">Texto</string>
-    <string name="color_text_menu">Texto do menu</string>
-    <string name="color_selected_grad_lt">Fundo de cima</string>
-    <string name="color_selected_grad_dk">Fundo de baixo</string>
-    <string name="color_selected_border">Borda</string>
-    <string name="color_selected_pressed">Fundo pressionado</string>
-    <string name="color_focused_grad_lt">Fundo de cima</string>
-    <string name="color_focused_grad_dk">Fundo de baixo</string>
-    <string name="color_focused_border">Borda</string>
-    <string name="color_focused_pressed">Fundo pressionado</string>
+    <string name="background">Fundo</string>
+    <string name="top_background">Fundo de cima</string>
+    <string name="bottom_background">Fundo de baixo</string>
+    <string name="pressed_background">Fundo pressionado</string>
+    <string name="window_background">Fundo da janela</string>
+    <string name="control_mode_background">Fundo do modo controle</string>
+    <string name="visualizer_background">Fundo da visualização</string>
+    <string name="highlight_background">Fundo do destaque</string>
+    <string name="icon">Ícone</string>
+    <string name="border">Borda</string>
+    <string name="divider">Divisor</string>
+    <string name="text">Texto</string>
+    <string name="text_secondary">Texto (secundário)</string>
+    <string name="window_text">Texto da janela</string>
+    <string name="window_text_disabled">Texto da janela (disabled)</string>
+    <string name="highlight_text">Texto do destaque</string>
     <string name="there_are_new_features">Há novas funcionalidades disponíveis no menu \"Opções\":</string>
     <string name="custom_widget">Widget personalizável</string>
     <string name="custom_color_theme">Tema de cores personalizável</string>
