--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -92,6 +92,7 @@
     <string name="add_songs">Добавить композиции</string>
     <string name="control_mode">Режим регулировки</string>
     <string name="list">Список&#8230;</string>
+    <string name="list2">Список</string>
     <string name="clear_list">Очистить список</string>
     <string name="load_list">Загрузить список</string>
     <string name="save_list">Сохранить список</string>
@@ -164,6 +165,7 @@
     <string name="blue">Синяя</string>
     <string name="orange">Оранжевая</string>
     <string name="light">Светлая</string>
+    <string name="dark_light">Темный-Светлая</string>
     <string name="new_setting">Новая настройка!</string>
     <string name="there_is_a_new_setting">Существует новый параметр в меню \"Настройки\":</string>
     <string name="check_it_out">Перевірте це :)</string>
@@ -180,27 +182,22 @@
     <string name="general">General</string>
     <string name="selection">Selection</string>
     <string name="keyboard_focus">Selection with Keyboard Focus</string>
-    <string name="color_window">Window background</string>
-    <string name="color_control_mode">Control mode background</string>
-    <string name="color_list">List background</string>
-    <string name="color_menu">Menu background</string>
-    <string name="color_menu_icon">Menu icon</string>
-    <string name="color_divider">Divider</string>
-    <string name="color_highlight">Highlight background</string>
-    <string name="color_text_highlight">Highlight text</string>
-    <string name="color_text">Window text</string>
-    <string name="color_text_disabled">Window text (disabled)</string>
-    <string name="color_text_listitem">List text</string>
-    <string name="color_text_selected">Text</string>
-    <string name="color_text_menu">Menu text</string>
-    <string name="color_selected_grad_lt">Top background</string>
-    <string name="color_selected_grad_dk">Bottom background</string>
-    <string name="color_selected_border">Border</string>
-    <string name="color_selected_pressed">Pressed background</string>
-    <string name="color_focused_grad_lt">Top background</string>
-    <string name="color_focused_grad_dk">Bottom background</string>
-    <string name="color_focused_border">Border</string>
-    <string name="color_focused_pressed">Pressed background</string>
+    <string name="background">Background</string>
+    <string name="top_background">Top background</string>
+    <string name="bottom_background">Bottom background</string>
+    <string name="pressed_background">Pressed background</string>
+    <string name="window_background">Window background</string>
+    <string name="control_mode_background">Control mode background</string>
+    <string name="visualizer_background">Visualizer background</string>
+    <string name="highlight_background">Highlight background</string>
+    <string name="icon">Icon</string>
+    <string name="border">Border</string>
+    <string name="divider">Divider</string>
+    <string name="text">Text</string>
+    <string name="text_secondary">Text (secondary)</string>
+    <string name="window_text">Window text</string>
+    <string name="window_text_disabled">Window text (disabled)</string>
+    <string name="highlight_text">Highlight text</string>
     <string name="there_are_new_features">There are new features available in the \"Settings\" menu:</string>
     <string name="custom_widget">Customizable widget</string>
     <string name="custom_color_theme">Customizable color theme</string>
